2006-07-03  Ian Lance Taylor  <ian@airs.com>
	    Paolo Carlini  <pcarlini@suse.de>

	* include/ext/rc_string_base.h (__rc_string_base::_S_max_size):
	Increase by a factor of two.
	* include/ext/sso_string_base.h (__sso_string_base::_S_max_size):
	Likewise.

2006-07-03  Paolo Carlini  <pcarlini@suse.de>

	* include/ext/sso_string_base.h (__sso_string_base::_M_create): Never
	allocate a string bigger than _S_max_size.

2006-06-29  Benjamin Kosnik  <bkoz@redhat.com>

	* include/Makefile.am (pch1_input, pch1_output_builddir,
	pch1_outputj_installdir, pch1_source): Move from pch_*.
	(pch2_input, pch2_output_builddir,
	pch2_output_installdir, pch2_source): Clone for ext.
	(pch3_input, pch3_output_builddir,
	pch3_output_installdir, pch3_source): Clone for tr1.
	(install-pch): Same.
	* include/Makefile.in: Regenerate.

	* include/precompiled: New directory.
	* include/stdc++.h: Move...
	* include/precompiled/stdc++.h: ... here.		
	* include/precompiled/stdtr1c++.h: New.
	* include/precompiled/extc++.h: New.

	* testsuite/lib/libstdc++.exp (libstdc++_init): Set PCH_CXXFLAGS
	to -include bits/stdtr1c++.h.

2006-06-29  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/lib/libstdc++.exp (v3_target_compile): Set timeout to
	600.

2006-06-27  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/util/regression/rand/priority_queue/
	rand_regression_test.hpp: Revert.

2006-06-27  Benjamin Kosnik  <bkoz@redhat.com>

	* include/ext/typelist.h (typelist_append): To append_typelist. 
	(typelist): To node.
	Enclose in namespace typelist.
	* testsuite/util/testsuite_common_types.h: Adjust names, namespaces.
	* testsuite/performance/23_containers/find/map.cc: Same.
	* testsuite/performance/23_containers/create/map.cc: Same.
	* testsuite/performance/23_containers/insert_erase/associative.cc: 
	Same.
	* testsuite/performance/23_containers/insert/sequence.cc: Same.
	* testsuite/performance/23_containers/insert/associative.cc: Same.